--- a/DvachBrowser3/Views/ThreadPage.xaml
+++ b/DvachBrowser3/Views/ThreadPage.xaml
@@ -63,7 +63,7 @@
                                x:Name="MainList" ShowFullPost="MainList_OnShowFullPost">
         </pa:PostCollectionView>
 
-        <pa:ContentPopup Grid.Row="2" x:Name="SinglePostViewPopup" IsContentVisibleChanged="ContentPopup_OnIsContentVisibleChanged">
+        <pa:ContentPopup Grid.Row="1" Grid.RowSpan="2" x:Name="SinglePostViewPopup" IsContentVisibleChanged="ContentPopup_OnIsContentVisibleChanged">
             <pa:ContentPopup.ViewContent>
                 <pa:SinglePostCollectionView ViewModel="{x:Bind ViewModel, Mode=OneWay}" MaxLines="0" ShowCounter="True" ShowPreviewSeparator="False" ShowFullPostButton="False"
                                              x:Name="SingleList" SelectedItem="{x:Bind SingleSelectedItem, Mode=TwoWay}"
