--- a/DvachBrowser3/Views/BoardPage.xaml
+++ b/DvachBrowser3/Views/BoardPage.xaml
@@ -60,7 +60,7 @@
         <pa:ProgressIndicatorControl Grid.Row="1" ViewModel="{x:Bind ViewModel.Update.Progress, Mode=OneWay}" ShowMessage="True" />
         <pa:BoardThreadRefList x:Name="MainList" Grid.Row="2" ViewModel="{x:Bind ViewModel.Page, Mode=OneWay}" ThreadTapped="MainList_OnThreadTapped" Margin="4, 4, 4, 0" 
                                ListTitle="{x:Bind ViewModel.TitleWithPage, Mode=OneWay}"/> 
-        <pa:ContentPopup Grid.Row="2" x:Name="ThreadPreviewPopup">
+        <pa:ContentPopup Grid.Row="1" x:Name="ThreadPreviewPopup" Grid.RowSpan="2">
             <pa:ContentPopup.ViewContent>
                 <pa:PostCollectionView x:Name="ThreadPreview" MaxLines="20" ShowCounter="False" ShowPreviewSeparator="True" ShowFullThreadText="Перейти в тред"
                                        ShowFullThread="ThreadPreview_OnShowFullThread"/>
