--- a/DvachBrowser3/Views/CatalogPage.xaml
+++ b/DvachBrowser3/Views/CatalogPage.xaml
@@ -87,7 +87,7 @@
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
-        <pa:ContentPopup x:Name="PostPreview" Grid.Row="3">
+        <pa:ContentPopup x:Name="PostPreview" Grid.Row="2" Grid.RowSpan="2">
             <pa:ContentPopup.ViewContent>
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled" Grid.Row="0" HorizontalAlignment="Stretch" x:Name="PostPreviewScroll">
                     <pa:PostView x:Name="PostView" MaxLines="0" ShowFullThreadText="Перейти в тред" ShowPreviewSeparator="True" ShowCounter="False"
