--- a/DvachBrowser3/Views/BoardsPage.xaml
+++ b/DvachBrowser3/Views/BoardsPage.xaml
@@ -80,17 +80,16 @@
                             <DataTemplate x:DataType="vm:IBoardListBoardViewModel">
                                 <pa:BoardTile ViewModel="{x:Bind This}" Margin="4" Tapped="BoardTile_OnTapped">
                                     <Interactivity:Interaction.Behaviors>
-                                        <Core:EventTriggerBehavior EventName="RightTapped">
-                                            <behaviors:OpenFlyoutAction />
-                                        </Core:EventTriggerBehavior>
+                                        <localBehaviors:PopupMenuBehavior>
+                                            <localBehaviors:PopupMenuBehavior.MenuFlyout>
+                                                <MenuFlyout>
+                                                    <MenuFlyoutItem Text="В избранное" Click="AddToFavorites_OnClick" Tag="{x:Bind This}" Visibility="{x:Bind Path=IsFavorite, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=true}" />
+                                                    <MenuFlyoutItem Text="Удалить" Click="RemoveFromFavorites_OnClick" Tag="{x:Bind This}" Visibility="{x:Bind Path=IsFavorite, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" />
+                                                    <MenuFlyoutItem Text="Информация" Click="BoardInfo_OnClick" Tag="{x:Bind This}"/>
+                                                </MenuFlyout>
+                                            </localBehaviors:PopupMenuBehavior.MenuFlyout>
+                                        </localBehaviors:PopupMenuBehavior>
                                     </Interactivity:Interaction.Behaviors>
-                                    <FlyoutBase.AttachedFlyout>
-                                        <MenuFlyout>
-                                            <MenuFlyoutItem Text="В избранное" Click="AddToFavorites_OnClick" Tag="{x:Bind This}" Visibility="{x:Bind Path=IsFavorite, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=true}" />
-                                            <MenuFlyoutItem Text="Удалить" Click="RemoveFromFavorites_OnClick" Tag="{x:Bind This}" Visibility="{x:Bind Path=IsFavorite, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" />
-                                            <MenuFlyoutItem Text="Информация" Click="BoardInfo_OnClick" Tag="{x:Bind This}"/>
-                                        </MenuFlyout>
-                                    </FlyoutBase.AttachedFlyout>
                                 </pa:BoardTile>
                             </DataTemplate>
                         </GridView.ItemTemplate>
