--- a/DvachBrowser3/Views/Partial/ContentPopup.xaml
+++ b/DvachBrowser3/Views/Partial/ContentPopup.xaml
@@ -60,7 +60,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="100*" />
             </Grid.RowDefinitions>
-            <Button Grid.Row="0" Margin="0, 5, 0, 5" HorizontalAlignment="Right" Visibility="{x:Bind IsHardwareBackButtonPresent, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=true}"
+            <Button Grid.Row="0" Margin="0, 5, 0, 5" HorizontalAlignment="Right" Visibility="{x:Bind IsShowCloseButton, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}"
                     Background="Transparent" MinWidth="48" ToolTipService.ToolTip="Закрыть" Click="CloseButton_OnClick">
                 <Viewbox Height="16" Width="16">
                     <SymbolIcon Symbol="Clear" Foreground="White" />
