--- a/DvachBrowser3/Views/Partial/PostingEntryView.xaml
+++ b/DvachBrowser3/Views/Partial/PostingEntryView.xaml
@@ -76,7 +76,7 @@
                                     <DataTemplate x:DataType="vm:IPostingIconElement">
                                         <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch">
                                             <Border Background="DarkGray" Padding="2" Margin="0, 0, 4, 0">
-                                                <Image Height="16" Width="16" Stretch="UniformToFill" Source="{x:Bind Image.Image, Mode=OneWay}" />
+                                                <Image Height="16" Width="16" Stretch="Uniform" Source="{x:Bind Image.Image, Mode=OneWay}" />
                                             </Border>
                                             <TextBlock Text="{x:Bind Name}" />
                                         </StackPanel>
@@ -107,6 +107,7 @@
                             </Grid.RowDefinitions>
                             <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom">Медиа файлы</TextBlock>
                             <CheckBox Grid.Row="0" Grid.Column="1" VerticalAlignment="Bottom" Margin="8, 0, 0, 0" Visibility="{x:Bind ViewModel.Fields.WatermarkFlag.IsSupported, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" IsChecked="{x:Bind ViewModel.Fields.WatermarkFlag.Value, Mode=TwoWay, Converter={StaticResource BoolToNullableConverter}}">Ватермарка</CheckBox>
+                            <local:PostingMediaCollectionView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" ViewModel="{x:Bind ViewModel.Fields.Media, Mode=OneWay}" />
                         </Grid>
                     </StackPanel>
                 </Grid>
