--- a/DvachBrowser3/Views/Partial/SinglePostCollectionView.xaml
+++ b/DvachBrowser3/Views/Partial/SinglePostCollectionView.xaml
@@ -33,6 +33,15 @@
                                     VerticalAlignment="Top">
                                 <interactivity:Interaction.Behaviors>
                                     <behaviors:CleanListContentMarginBehavior NarrowThickness="{StaticResource CleanListPaddingNarrow}" NormalThickness="{StaticResource CleanListPadding}" />
+                                    <behaviors:PopupMenuBehavior>
+                                        <behaviors:PopupMenuBehavior.MenuFlyout>
+                                            <MenuFlyout>
+                                                <MenuFlyoutItem Text="Копировать текст" Tag="{x:Bind}" Click="CopyTextFlyoutItem_OnClick"/>
+                                                <MenuFlyoutItem Text="Копировать ссылку" Tag="{x:Bind}" Click="CopyLinkFlyoutItem_OnClick" />
+                                                <MenuFlyoutItem Text="Ответить" Tag="{x:Bind}" Click="PostQuoteFlyoutItem_OnClick"/>
+                                            </MenuFlyout>
+                                        </behaviors:PopupMenuBehavior.MenuFlyout>
+                                    </behaviors:PopupMenuBehavior>
                                 </interactivity:Interaction.Behaviors>
                             </local:PostView>
                         </ScrollViewer>
