--- a/DvachBrowser3/Views/Partial/PostingMediaCollectionView.xaml
+++ b/DvachBrowser3/Views/Partial/PostingMediaCollectionView.xaml
@@ -42,19 +42,32 @@
                             </Grid>
                         </Border>
                         <TextBlock Grid.Row="1" TextWrapping="Wrap" Width="{x:Bind StyleManager.Tiles.PostingMediaTileWidth, Mode=OneWay}"
-                                   TextAlignment="Left"
+                                   TextAlignment="Left" Margin="0, 2, 0, 2"
                                    FontSize="{x:Bind StyleManager.Text.SmallFontSize, Mode=OneWay}">
                             <Run Text="{x:Bind SizeStr, Mode=OneWay}" />, <Run Text="{x:Bind OriginalName, Mode=OneWay}" />
                         </TextBlock>
-                        <StackPanel Grid.Row="2" Width="{x:Bind StyleManager.Tiles.PostingMediaTileWidth, Mode=OneWay}">
-                            <CheckBox IsChecked="{x:Bind AddUniqueId, Mode=TwoWay, Converter={StaticResource BoolToNullableConverter}}">Уникальный хэш</CheckBox>
-                            <CheckBox IsChecked="{x:Bind Resize, Mode=TwoWay, Converter={StaticResource BoolToNullableConverter}}" IsEnabled="{x:Bind CanResize, Mode=OneWay}">Уменьшить</CheckBox>
-                            <Button HorizontalAlignment="Stretch" Tag="{x:Bind}" Click="DeleteButton_OnClick" ToolTipService.ToolTip="Удалить">
+                        <Grid Grid.Row="2" Width="{x:Bind StyleManager.Tiles.PostingMediaTileWidth, Mode=OneWay}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="25*" />
+                                <ColumnDefinition Width="25*" />
+                                <ColumnDefinition Width="50*" />
+                            </Grid.ColumnDefinitions>
+                            <ToggleButton Grid.Column="0" Margin="0" HorizontalAlignment="Stretch" IsChecked="{x:Bind AddUniqueId, Mode=TwoWay, Converter={StaticResource BoolToNullableConverter}}" ToolTipService.ToolTip="Уникальный хэш">
+                                <Viewbox Height="16" Width="16">
+                                    <SymbolIcon Symbol="Shuffle" />
+                                </Viewbox>
+                            </ToggleButton>
+                            <ToggleButton Grid.Column="1" Margin="2, 0, 0, 0" HorizontalAlignment="Stretch" IsChecked="{x:Bind Resize, Mode=TwoWay, Converter={StaticResource BoolToNullableConverter}}" IsEnabled="{x:Bind CanResize, Mode=OneWay}" ToolTipService.ToolTip="Уменьшить">
+                                <Viewbox Height="16" Width="16">
+                                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE1D8;" />
+                                </Viewbox>
+                            </ToggleButton>
+                            <Button Grid.Column="2" Margin="2, 0, 0, 0" HorizontalAlignment="Stretch" Tag="{x:Bind}" Click="DeleteButton_OnClick" ToolTipService.ToolTip="Удалить">
                                 <Viewbox Height="16" Width="16">
                                     <SymbolIcon Symbol="Delete" />
                                 </Viewbox>
                             </Button>
-                        </StackPanel>
+                        </Grid>
                     </Grid>
                 </DataTemplate>
             </GridView.ItemTemplate>
