Доработки дизайна + исправление баги с обновлением ответов на пост

--- a/DvachBrowser3/Views/Partial/PostCollectionView.xaml
+++ b/DvachBrowser3/Views/Partial/PostCollectionView.xaml
@@ -15,6 +15,9 @@
 
     <Grid>
         <ListView x:Name="MainList" ItemsSource="{x:Bind ViewModel.Posts, Mode=OneWay}" SelectionMode="None" Header="{x:Bind Header, Mode=OneWay}" Footer="{x:Bind Footer, Mode=OneWay}">
+            <ListView.ItemContainerTransitions>
+                <TransitionCollection />
+            </ListView.ItemContainerTransitions>
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
